Name:                zippo
Version:             0.3
Synopsis:            A simple lens-based, generic, heterogenous, type-checked zipper library
Description:         This light-weight library provides a basic, but fully-type-checked
                     zipper implementation, suitable for any algebraic data structure.
                     Our implementation has no notion of \"left\" and \"right\", and
                     instead uses lenses (from the "yall" package) to indicate directions
                     to \"navigate down to\".
                     .
                     For a similar approach with many more features, but less type-safety
                     see "pez".
                     .
                     /CHANGES/: 0.2 to 0.3:
                     .
                     - Converted to use the @lens@ package.
                     .
                     /CHANGES/: 0.1 to 0.2:
                     .
                     - Export all data type implementations (mea culpa!)
                     .
                     - better documentation
Homepage:            http://brandon.si/code/zippo/
License:             BSD3
License-file:        LICENSE
Author:              Brandon Simmons
Maintainer:          brandon.m.simmons@gmail.com
Category:            Data
Build-type:          Simple
Extra-source-files:  README.md
Cabal-version:       >=1.6


source-repository head
    type:     git
    location: https://github.com/jberryman/zippo.git
    branch:   master

Library
  Exposed-modules:     Control.Lens.Zipper

  Build-depends:       mtl >= 2
                     , lens >= 2.9 && < 3.0
                     , base < 5 && >= 4
